# TextureAtlas

./: .gitignore  CMakeCache.txt  CMakeLists.txt
include/: JLFileManager.h  JLTextureGen.h  main.h
src/: JLFileManager.cpp  JLTextureGen.cpp  main.cpp
